--- a/html/amour.html
+++ b/html/amour.html
@@ -74,6 +74,9 @@
                     <p style="text-align: end;">Elliott.</p>
                 </div>
                 <div class="poeme2">
+                    <img src="https://media.discordapp.net/attachments/1184982072310366300/1185265521705361478/gif-smiley-amour-337.gif?ex=658efb89&is=657c8689&hm=506b62e40b256c1cc4c428ecf396ff725914fbc677c4e3c0fdd4dddac727b8ac&=&width=512&height=540" alt="">
+                </div>
+                <div class="poeme2">
                     <img src="https://media.discordapp.net/attachments/1184982072310366300/1185033772647849984/heartbeat-jerry.gif?ex=658e23b4&is=657baeb4&hm=9d14acf162c7b77d84b5ca53fde7fd1139d83465f1e74f07361953d38abdbe28&=&width=700&height=700" alt="">
                     <p>moi quand je vois Anouck...</p>
                 </div>
@@ -84,11 +87,11 @@
             <div class="row-container">
                 <div class="img-card">
                     <img src="https://media.discordapp.net/attachments/1184982072310366300/1185035881170599987/IMG_6035.jpg?ex=658e25aa&is=657bb0aa&hm=6c60ce9c582da214a887b4c36f90f3e802c2d62ceb3e1002932a72f83edfc435&=&format=webp&width=836&height=1114" alt="">
-                    <p>Bonnet pour Anouck...</p>
+                    <p>Anouck bonnet...</p>
                 </div>
                 <div class="img-card">
                     <img src="https://media.discordapp.net/attachments/1184982072310366300/1185035879367053432/IMG_6472.jpg?ex=658e25aa&is=657bb0aa&hm=88c13e502a3e4441e09a93d7307bb0733a2fe4f633264c6983e6750f754b38b6&=&format=webp&width=836&height=1114" alt="">
-                    <p>Coquette Anouck...</p>
+                    <p>Anouck coquette...</p>
                 </div>
                 <div class="img-card">
                     <img src="https://media.discordapp.net/attachments/1184982072310366300/1185035879895531600/IMG_6461.jpg?ex=658e25aa&is=657bb0aa&hm=faec0fc5efd72a839551976691042ec3bde64c76ba300bb9fd7ec9f6014b4ca6&=&format=webp&width=836&height=1114" alt="">
