--- a/html/amour.html
+++ b/html/amour.html
@@ -119,7 +119,7 @@
 
         <div class="box">
             <div class="column-container">
-                <img style="margin-top: 20px;width: 90%;" src="https://cdn.discordapp.com/attachments/1184982072310366300/1185044188014837860/lp_image.GIF?ex=658e2d67&is=657bb867&hm=594722d7aadcf2c24eedfdc7d0fc8f60195cdd8d918305046bb95cb3a664c9ad&" alt="">
+                <img style="margin-top: 20px;width: 90%;border-radius: 10px;" src="https://cdn.discordapp.com/attachments/1184982072310366300/1185044188014837860/lp_image.GIF?ex=658e2d67&is=657bb867&hm=594722d7aadcf2c24eedfdc7d0fc8f60195cdd8d918305046bb95cb3a664c9ad&" alt="">
                 <div style="width: 90%;"><p>C'est la fin de ce tour de mon jardin secret... Il n'y qu'une femme sur terre qui peut me rendre heureux et vous savez qui c'est maintenant ;)</p>
                     <p>PS : Les rageux allez voir ailleurs si j'y suis ;P</p></div>
             </div>
