--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,10 +10,10 @@
 <body>
     <div class="center-container">
         <div class="txt-container">
-            <h1>bienvenue dans mon jardin secret...</h1>
+            <h1>Bienvenue dans mon jardin secret...</h1>
             <h1>...Veux-tu découvrir ce qui s'y cache ?</h1>
-            <a href="html/amour.html"><p>Oui je le veux</p></a>
-            <a href="html/mort.html"><p>Non...</p></a></div>
+            <a href="html/amour.html"><p class="btn">Oui je le veux</p></a>
+            <a href="html/mort.html"><p class="btn">Non...</p></a></div>
     </div>
 </body> 
 </html>
