--- a/html/amour.html
+++ b/html/amour.html
@@ -21,7 +21,8 @@
         <div class="column-container">
             <div class="player-container">
                 <h3 style="font-family: 'Charmonman';padding-left: 20px;padding-right: 20px;">je te laisse découvrir ce qui se cache ici... si tu veux un peu de musique tu peux cliquer sur les boutons d'en dessous, fais le ;)</h3>
-                <audio controls id="myAudio" src="../audio/Just the Two of Us (feat. Bill Withers).mp3"></audio>
+                <audio controls id="myAudio" src="../audio/Just the Two of Us (feat. Bill Withers).mp3">
+                </audio>
             </div>
         </div>
     </div>
@@ -125,6 +126,10 @@
             </div>
         </div>
         </div>
-    <div class="footer"></div>
+    <div class="footer">
+        <a href="../index.html">
+            <p>RETOUR</p>
+        </a>
+    </div>
 </body> 
 </html>
