--- a/html/amour.html
+++ b/html/amour.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/main-style.css">
     <link rel="icon" href="https://media.discordapp.net/attachments/1184982072310366300/1185003175359545445/retro-red-rose-icon-png.png?ex=658e0735&is=657b9235&hm=29fdcd495a5fd2be4c88af0441561a18e0f2c71323ca60665d338fb66b5e6dd3&=&format=webp&quality=lossless&width=1116&height=1116" type="image/png">
-    <script src="../js/script.js"></script>
     <title>mon jardin secret...</title>
 </head>
 <body>
@@ -124,10 +123,40 @@
 
         <div class="box">
             <div class="column-container">
+                <div class="quiz"id="quiz">
+                    <h1 id="titleQuiz">Quiz sur Anouck.</h1>
+                    <div class="box">
+                        <div class="column-container">
+                            <h2 id="question"></h2>
+                            <h3 id="score"></h3>
+                            <div class="choices">
+                                <div id="guess0" class="btn">
+                                    <p id="choice0"></p>
+                                </div>
+                                <div id="guess1" class="btn">
+                                    <p id="choice1"></p>
+                                </div>
+                                <div id="guess2" class="btn">
+                                    <p id="choice2"></p>
+                                </div>
+                                <div id="guess3" class="btn">
+                                    <p id="choice3"></p>
+                                </div>
+                            </div>
+                            <div id="progress"></div>
+
+                        </div> 
+                    </div>     
+                </div>
+            </div>
+        </div>
+
+        <div class="box"> <!-- FOOTER -->
+            <div class="column-container">
                 <img style="margin-top: 20px;width: 90%;border-radius: 10px;" src="https://cdn.discordapp.com/attachments/1184982072310366300/1185044188014837860/lp_image.GIF?ex=658e2d67&is=657bb867&hm=594722d7aadcf2c24eedfdc7d0fc8f60195cdd8d918305046bb95cb3a664c9ad&" alt="">
                 <div style="width: 90%;"><p>C'est la fin de ce tour de mon jardin secret... Il n'y qu'une femme sur terre qui peut me rendre heureux et vous savez qui c'est maintenant ;)</p>
                     <p>PS : Les rageux allez voir ailleurs si j'y suis ;P</p></div>
-            </div>
+        x@    </div>
         </div>
         </div>
     <div class="footer">
@@ -135,5 +164,8 @@
             <p>RETOUR</p>
         </a>
     </div>
+    <script src="../js/script.js"></script>
+    
+
 </body> 
 </html>
