--- a/html/amour.html
+++ b/html/amour.html
@@ -151,6 +151,13 @@
             </div>
         </div>
 
+        <div class="box">
+            <div class="column-container">
+                <h1>Voulez-vous découvrir le paradis d'anouck ?</h1>
+                <a href="paradis.html"><h2>C'est ici...</h2></a>
+            </div>
+        </div>
+
         <div class="box"> <!-- FOOTER -->
             <div class="column-container">
                 <img style="margin-top: 20px;width: 90%;border-radius: 10px;" src="https://cdn.discordapp.com/attachments/1184982072310366300/1185044188014837860/lp_image.GIF?ex=658e2d67&is=657bb867&hm=594722d7aadcf2c24eedfdc7d0fc8f60195cdd8d918305046bb95cb3a664c9ad&" alt="">
