--- a/html/amour.html
+++ b/html/amour.html
@@ -20,6 +20,7 @@
         <div class="column-container">
             <div class="player-container">
                 <h3 style="font-family: 'Charmonman';padding-left: 20px;padding-right: 20px;">je te laisse découvrir ce qui se cache ici... si tu veux un peu de musique tu peux cliquer sur les boutons d'en dessous, fais le ;)</h3>
+                <h3 style="font-family: 'Charmonman';padding-left: 20px;padding-right: 20px;">Mais si tu veux en savoir plus sur ce que aime Anouck c'est : <a href="musique.html">ICI</a></h3>
                 <audio controls id="myAudio" src="../audio/Just the Two of Us (feat. Bill Withers).mp3">
                 </audio>
             </div>
@@ -125,7 +126,7 @@
             <div class="column-container">
                 <div class="quiz"id="quiz">
                     <h1 id="titleQuiz">Quiz sur Anouck.</h1>
-                    <div class="box">
+                    <div class="box" id="boxquiz">
                         <div class="column-container">
                             <h2 id="question"></h2>
                             <h3 id="score"></h3>
@@ -171,6 +172,7 @@
             <p>RETOUR</p>
         </a>
     </div>
+    
     <script src="../js/script.js"></script>
     
 
