--- a/html/paradis.html
+++ b/html/paradis.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Elliott</title>
+    <title>Paradis</title>
     <link rel="stylesheet" href="../css/paradis.css">
 </head>
 <body>
@@ -37,6 +37,6 @@
         <img src="https://media.discordapp.net/attachments/1189941708432101458/1189948299873108118/IMG_6785.jpg?ex=65a004b6&is=658d8fb6&hm=412acf808b9e4472459dde66e540a75b4241de115d374e170f7e9177c86f43ad&=&format=webp&width=628&height=1114" alt=" " />
         <img src="https://media.discordapp.net/attachments/1189941708432101458/1189948300204449802/IMG_6786.jpg?ex=65a004b6&is=658d8fb6&hm=b14d5579d688fa984b239aac9950d6ad061cdb9bd6820ce08ea4901c86c56a75&=&format=webp&width=628&height=1114" alt=" " />
         <img src="https://media.discordapp.net/attachments/1189941708432101458/1189948300867162233/IMG_6779.jpg?ex=65a004b7&is=658d8fb7&hm=2d39e6871c9c143be4a9e41e38311c2a96f4d22313c36b00709f605257577bee&=&format=webp&width=836&height=1114" alt=" " />
-      </div>
+    </div>
 </body>
 </html>
