--- a/html/amour.html
+++ b/html/amour.html
@@ -20,7 +20,7 @@
         <div class="column-container">
             <div class="player-container">
                 <h3 style="font-family: 'Charmonman';padding-left: 20px;padding-right: 20px;">je te laisse découvrir ce qui se cache ici... si tu veux un peu de musique tu peux cliquer sur les boutons d'en dessous, fais le ;)</h3>
-                <h3 style="font-family: 'Charmonman';padding-left: 20px;padding-right: 20px;">Mais si tu veux en savoir plus sur ce que aime Anouck c'est : <a href="musique.html">ICI</a></h3>
+                <h3 style="font-family: 'Charmonman';padding-left: 20px;padding-right: 20px;">Mais si tu veux en savoir plus sur ce que aime Anouck c'est : </h3><a  href="musique.html"><div class="btn">ICI</div></a>
                 <audio controls id="myAudio" src="../audio/Just the Two of Us (feat. Bill Withers).mp3">
                 </audio>
             </div>
@@ -164,8 +164,8 @@
                 <img style="margin-top: 20px;width: 90%;border-radius: 10px;" src="https://cdn.discordapp.com/attachments/1184982072310366300/1185044188014837860/lp_image.GIF?ex=658e2d67&is=657bb867&hm=594722d7aadcf2c24eedfdc7d0fc8f60195cdd8d918305046bb95cb3a664c9ad&" alt="">
                 <div style="width: 90%;"><p>C'est la fin de ce tour de mon jardin secret... Il n'y qu'une femme sur terre qui peut me rendre heureux et vous savez qui c'est maintenant ;)</p>
                     <p>PS : Les rageux allez voir ailleurs si j'y suis ;P</p></div>
-        x@    </div>
-        </div>
+                </div>
+            </div>
         </div>
     <div class="footer">
         <a href="../index.html">
