add image on github serv

--- a/html/amour.html
+++ b/html/amour.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/main-style.css">
-    <link rel="icon" href="https://media.discordapp.net/attachments/1184982072310366300/1185003175359545445/retro-red-rose-icon-png.png?ex=658e0735&is=657b9235&hm=29fdcd495a5fd2be4c88af0441561a18e0f2c71323ca60665d338fb66b5e6dd3&=&format=webp&quality=lossless&width=1116&height=1116" type="image/png">
+    <link rel="icon" href="../images/rose-icon.png" type="image/png">
     <title>mon jardin secret...</title>
 </head>
 <body>
@@ -30,7 +30,7 @@
     <div class="box"> <!-- box reveal -->
         <div class="row-container">
             <div class="left-board">
-                <img class="rose" src="https://media.discordapp.net/attachments/1184982072310366300/1185026674698498069/rosierg.png?ex=658e1d17&is=657ba817&hm=b6a126879159eb41f4f0ceec572aab8eb08c72fc39c2baca8e6d4411ce4ab095&=&format=webp&quality=lossless&width=558&height=1116" alt="">
+                <img class="rose" src="../images/rosierg.png" alt="">
             </div>
             <div class="center-board">
                 <div class="introduction-container">
@@ -39,8 +39,8 @@
                     <p>découvrons le...</p>
                 </div>
                 <div class="images-container">
-                    <img class="coeur-image" id="img1" src="https://media.discordapp.net/attachments/1184982072310366300/1185019848997212160/coeur1.png?ex=658e16bc&is=657ba1bc&hm=ba393cb6c1dcd0a2a8ad0c1c03f2d31566b05d4bba87d1b32388c1c433b13c66&=&format=webp&quality=lossless&width=1116&height=1116" alt="">
-                    <img class="coeur-image" id="img2" src="https://media.discordapp.net/attachments/1184982072310366300/1185019849299214346/coeur2.png?ex=658e16bc&is=657ba1bc&hm=a402e93ce20b1273a6baaac3db061e12f6b48d9a2afeb9add5008bff0572b984&=&format=webp&quality=lossless&width=1116&height=1116" alt="">
+                    <img class="coeur-image" id="img1" src="../images/coeur1.png" alt="">
+                    <img class="coeur-image" id="img2" src="../images/coeur2.png" alt="">
                 </div>
                 <div class="introduction-container">
                     <p>Et oui !!!</p>
@@ -48,7 +48,7 @@
                 </div>
                 </div>
                 <div class="right-board">
-                    <img class="rose" src="https://media.discordapp.net/attachments/1184982072310366300/1185026674316804177/rosier.png?ex=658e1d17&is=657ba817&hm=dab512e4a37c8e73d5e3a2450ebd7871cfb7747bcf76df91622115f3590066b0&=&format=webp&quality=lossless&width=558&height=1116" alt="">
+                    <img class="rose" src="../images/rosier.png" alt="">
                 </div>
             </div>
     </div>
@@ -75,10 +75,10 @@
                     <p style="text-align: end;">Elliott.</p>
                 </div>
                 <div class="poeme2">
-                    <img src="https://media.discordapp.net/attachments/1184982072310366300/1185265521705361478/gif-smiley-amour-337.gif?ex=658efb89&is=657c8689&hm=506b62e40b256c1cc4c428ecf396ff725914fbc677c4e3c0fdd4dddac727b8ac&=&width=512&height=540" alt="">
+                    <img src="../images/gif-smiley-amour.gif" alt="">
                 </div>
                 <div class="poeme2">
-                    <img src="https://media.discordapp.net/attachments/1184982072310366300/1185033772647849984/heartbeat-jerry.gif?ex=658e23b4&is=657baeb4&hm=9d14acf162c7b77d84b5ca53fde7fd1139d83465f1e74f07361953d38abdbe28&=&width=700&height=700" alt="">
+                    <img src="../images/heartbeat-jerry.gif" alt="">
                     <p>moi quand je vois Anouck...</p>
                 </div>
             </div>
@@ -87,11 +87,11 @@
         <div class="box"> <!-- box img card -->
             <div class="row-container">
                 <div class="img-card">
-                    <img src="https://media.discordapp.net/attachments/1184982072310366300/1185035881170599987/IMG_6035.jpg?ex=658e25aa&is=657bb0aa&hm=6c60ce9c582da214a887b4c36f90f3e802c2d62ceb3e1002932a72f83edfc435&=&format=webp&width=836&height=1114" alt="">
+                    <img src="../images/bonnet.jpeg" alt="">
                     <p>Anouck bonnet...</p>
                 </div>
                 <div class="img-card">
-                    <img src="https://media.discordapp.net/attachments/1184982072310366300/1185035879367053432/IMG_6472.jpg?ex=658e25aa&is=657bb0aa&hm=88c13e502a3e4441e09a93d7307bb0733a2fe4f633264c6983e6750f754b38b6&=&format=webp&width=836&height=1114" alt="">
+                    <img src="../images/coquette.jpeg" alt="">
                     <p>Anouck coquette...</p>
                 </div>
 <!--                 <div class="img-card">
@@ -99,11 +99,11 @@
                     <p>Anouck coquine...</p>
                 </div> -->
                 <div class="img-card">
-                    <img src="https://media.discordapp.net/attachments/1184982072310366300/1188911924260388945/82995AAC-0F17-4CC1-9581-9A29C14351F4_1_105_c.jpeg?ex=659c3f83&is=6589ca83&hm=99fd5b57783a4f6511dca6bc4c7bda64e87145785e2ebebe1db117ca74a6efef&=&format=webp&width=836&height=1116" alt="">
+                    <img src="../images/swag.jpeg" alt="">
                     <p>Anouck swag...</p>
                 </div>
                 <div class="img-card">
-                    <img src="https://media.discordapp.net/attachments/1184982072310366300/1185035881644572693/IMG_6386.jpg?ex=658e25ab&is=657bb0ab&hm=690ba6e58b887ef0a6d6df16b1f1a4ab23c4fff55ef869d461065fcb96ecfaf6&=&format=webp&width=836&height=1114" alt="">
+                    <img src="../images/regale.jpeg" alt="">
                     <p>Anouck se regale...</p>
                 </div>
             </div>
@@ -113,11 +113,11 @@
             <div class="row-container">
                 <div style="width: 45%;padding-left: 20px; padding-bottom: 20px;">
                     <h1>Ma vie sans Anouck :</h1>
-                    <img style="width: 100%;"  src="https://media.discordapp.net/attachments/1184982072310366300/1185041556768559184/sad-sea.gif?ex=658e2af4&is=657bb5f4&hm=3d4be83c136d31a4329c988dad4d224a3e04063bfce7bf9fa561e572a82ac385&=&width=986&height=996" alt="">
+                    <img style="width: 100%;"  src="../images/sad-sea.gif" alt="">
                 </div>
                 <div style="width: 45%;padding-right: 20px; padding-bottom: 20px;">
                     <h1>Ma vie avec Anouck :</h1>
-                    <img style="width: 100%;" src="https://media.discordapp.net/attachments/1184982072310366300/1185041556361715753/happy-cat.gif?ex=658e2af4&is=657bb5f4&hm=4e89ce077dcbb22e48ab4f9339ca0dd3efe7e0a141c6714c73a3643ca8a86548&=&width=1116&height=1116" alt="">
+                    <img style="width: 100%;" src="../images/happy-cat.gif" alt="">
                 </div>
             </div>
         </div>
@@ -161,7 +161,7 @@
 
         <div class="box"> <!-- FOOTER -->
             <div class="column-container">
-                <img style="margin-top: 20px;width: 90%;border-radius: 10px;" src="https://cdn.discordapp.com/attachments/1184982072310366300/1185044188014837860/lp_image.GIF?ex=658e2d67&is=657bb867&hm=594722d7aadcf2c24eedfdc7d0fc8f60195cdd8d918305046bb95cb3a664c9ad&" alt="">
+                <img style="margin-top: 20px;width: 90%;border-radius: 10px;" src="../images/lp_image.gif" alt="">
                 <div style="width: 90%;"><p>C'est la fin de ce tour de mon jardin secret... Il n'y qu'une femme sur terre qui peut me rendre heureux et vous savez qui c'est maintenant ;)</p>
                     <p>PS : Les rageux allez voir ailleurs si j'y suis ;P</p></div>
                 </div>
