--- a/index.html
+++ b/index.html
@@ -1,19 +1,20 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="icon" href="https://media.discordapp.net/attachments/1184982072310366300/1185003175359545445/retro-red-rose-icon-png.png?ex=658e0735&is=657b9235&hm=29fdcd495a5fd2be4c88af0441561a18e0f2c71323ca60665d338fb66b5e6dd3&=&format=webp&quality=lossless&width=1116&height=1116" type="image/png">
-    <title>Les porte de mon jardin secret...</title>
-</head>
-<body>
-    <div class="center-container">
-        <div class="txt-container">
-            <h1>Bienvenue dans mon jardin secret...</h1>
-            <h1>...Veux-tu découvrir ce qui s'y cache ?</h1>
-            <a href="html/amour.html"><p class="btn">Oui je le veux</p></a>
-            <a href="html/mort.html"><p class="btn">Non...</p></a></div>
-    </div>
-</body> 
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="stylesheet" href="css/style.css" />
+        <link rel="icon" href="images/rose-icon.png" type="image/png" />
+        <title>Les porte de mon jardin secret...</title>
+    </head>
+    <body>
+        <div class="center-container">
+            <div class="txt-container">
+                <h1>Bienvenue dans mon jardin secret...</h1>
+                <h1>...Veux-tu découvrir ce qui s'y cache ?</h1>
+                <a href="html/amour.html"><p class="btn">Oui je le veux</p></a>
+                <a href="html/mort.html"><p class="btn">Non...</p></a>
+            </div>
+        </div>
+    </body>
 </html>
